Partial fix for versions dropdown alignment

--- a/src/components/sidebar-app/sidebar-app.scss
+++ b/src/components/sidebar-app/sidebar-app.scss
@@ -1,7 +1,5 @@
 .annoeditor-sidebar {
 
-  .hidden { display: none; }
-
   &.annoeditor-sidebar-standalone {
     position: fixed;
     z-index: 1000;
